--- a/spring-oauth2/spring-boot-oauth-jwt-server/src/main/resources/application.yml
+++ b/spring-oauth2/spring-boot-oauth-jwt-server/src/main/resources/application.yml
@@ -2,9 +2,9 @@ server:
   port: 8081
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/test_oauth?characterEncoding=UTF-8
-    username: services_dev
-    password: services_dev
+    url: jdbc:mysql://47.106.162.118:3306/sta_auth?autoReconnect=true&zeroDateTimeBehavior=convertToNull&useSSL=false
+    username: root
+    password: 12345679
     driver-class-name: com.mysql.jdbc.Driver
 #  jpa:
 #    hibernate:
