--- a/spring-oauth2/spring-boot-oauth-server/src/main/resources/application.yml
+++ b/spring-oauth2/spring-boot-oauth-server/src/main/resources/application.yml
@@ -1,10 +1,10 @@
 server:
-  port: 8081
+  port: 8085
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/test_oauth?characterEncoding=UTF-8
-    username: services_dev
-    password: services_dev
+    url: jdbc:mysql://47.106.162.118:3306/sta_project?autoReconnect=true&zeroDateTimeBehavior=convertToNull&useSSL=false&characterEncoding=utf-8
+    username: root
+    password: 12345679
     driver-class-name: com.mysql.jdbc.Driver
   jpa:
     hibernate:
